# mercadona-catalog

./: .gitignore  Makefile  README.md  api.md  embed_products.py  index.html  mercadona.py  pyproject.toml
.github/workflows/: run.yml
data/: README.md
